CFLAGS+=-Wall -I./netfpga-packet-generator-c-library/include/ 

SUBDIRS =  openflow_action_scalability oflops_debug \
           openflow_flow_stats openflow_aggr_flow_stats \
           openflow_add_flow openflow_mod_flow \
           openflow_packet_in openflow_packet_out \
           openflow_port_status snmp_cpu \
           snmp_cpu snmp_queue_delay openflow_reactive nf_pktgen_test \
           openflow_timer openflow_interaction_test \
           openflow_echo_delay openflow_interaction_test_2 openflow_interaction_test_3

#openflow_action_delay  
