CFLAGS+=-Wall -I./netfpga-packet-generator-c-library/include/ 

SUBDIRS =  oflops_debug openflow_echo_delay \
           openflow_flow_stats openflow_aggr_flow_stats \
           openflow_add_flow openflow_mod_flow \
           openflow_packet_in openflow_packet_out \
           openflow_action_delay\
           snmp_queue_delay openflow_reactive \
		   openflow_table_delay \
           openflow_timer openflow_interaction_test 

# openflow_action_delay nclude/nf_pktgen.h nf_pktgen_test openflow_port_status 
# openflow_interaction_test_2 openflow_interaction_test_3 snmp_cpu  
